# data-availability

./: .devenv.flake.nix  .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README  README.md  cliff.toml  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  go.mod  go.sum  go.work  go.work.sum  http-config.template.json  justfile  recipe.json  rust-toolchain.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: audit.dontdoyml  manual.yml  on_main.yml  on_main_merge.yml  on_merge_master.yml  on_pull_request.yml
api/: Plasma: get.bru  bruno.json  plasma-get.bru  plasma-put.bru
api/environments/: local.bru
contracts/blob-registry/: Cargo.toml
contracts/blob-registry/src/: events.rs  lib.rs
contracts/blob-registry/tests/: tests.rs
contracts/blob-store/: Cargo.toml
contracts/blob-store/src/: lib.rs
contracts/blob-store/tests/: tests.rs
crates/da-rpc/: Cargo.toml
crates/da-rpc-sys/: Cargo.toml  Dockerfile  Makefile  build.rs
crates/da-rpc-sys/src/: lib.rs
crates/da-rpc/src/: lib.rs
crates/da-rpc/src/near/: config.rs  mod.rs
crates/erasure-commit/: Cargo.toml  Makefile
crates/erasure-commit/specs/: foundations.py
crates/erasure-commit/src/: erasure.rs  grid.rs  lib.rs
crates/erasure-commit/src/scheme/: kzg.rs
crates/http-api-data/: Cargo.toml
crates/http-api-data/src/: lib.rs
crates/op-rpc/: Cargo.toml  build.rs  throwaway-key.json
crates/op-rpc-sys/: Cargo.toml  Dockerfile  Makefile  build.rs
crates/op-rpc-sys/src/: lib.rs
crates/op-rpc/src/: ffi.rs  lib.rs
crates/op-rpc/src/near/: config.rs  mod.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/primitives/src/das/: erasure_commitment.rs  mod.rs
crates/primitives/src/das/erasure_commitment/: erasure.rs  grid.rs
crates/primitives/src/das/erasure_commitment/scheme/: kzg.rs
docs/: OP-Alt-DA.md  README.md  da_rpc.md  da_rpc.mermaid  da_rpc_client.md  go_da_rpc.md  go_da_rpc.mermaid  optimisim_containers.md  system_context.md  test.md
eth/: README.md  bun.lockb  foundry.toml  justfile  package.json  remappings.txt  todoscript.sh
eth/script/: Deploy.s.sol
eth/src/: NearDataAvailability.sol
eth/test/: NearDataAvailability.t.sol
gopkg/da-rpc/: README.md  near.go  near_darwin.go  near_test.go  near_unix.go
gopkg/da-rpc/lib/: libnear_da_rpc_sys.h
gopkg/sidecar/: near.go  near_test.go
op-stack/: .dockerignore
op-stack/da-rpc/: README.md  go.mod  near.go
scripts/: enrich.sh
test/: genesis.json  http-sidecar.json  node_key.json  sandbox.Dockerfile  validator_key.json
test/plasma/: Makefile  main_test.go  optimism_test.go  pull-contracts.sh  server_test.go  setup.go
