[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

# [profile.dev]
# debug = 0

[workspace.package]
version = "2.0.0"
authors = ["Pagoda <hello@near.org>"]
edition = "2021"

[workspace]
members = ["crates/*", "contracts/*", "bin/*"]
resolver = "2"

[workspace.dependencies]
# Nostd
borsh = { version = "0.10.3", default-features = false }
serde_with = { version = "3.4", default-features = false, features = [
  "hex",
  "base64",
  "macros",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Std aware
eyre = "0.6"
log = "0.4"
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"

# NEAR
near-sdk = "4.0.0"
near-crypto = "0.17.0"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
near-primitives = "0.17.0"
near-sdk-contract-tools = "1.0.1"
