[profile.release]
codegen-units   = 1
debug           = false
lto             = true
opt-level       = "z"
overflow-checks = true
panic           = "abort"

# [profile.dev]
# debug = 0

[workspace.package]
authors = [ "Pagoda <hello@near.org>" ]
edition = "2021"
version = "0.3.0"

[workspace]
members  = [ "bin/*", "crates/*", "contracts/*" ]
resolver = "2"

[workspace.dependencies]
# Nostd
borsh      = { version = "1.4", default-features = false }
serde      = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_with = { version = "3.4", default-features = false, features = [ "hex", "base64", "macros" ] }

# Std aware
async-trait        = "0.1"
eyre               = "0.6"
futures            = "0.3"
hex                = "0.4"
log                = "0.4"
rand               = "0.8"
serde_json         = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

# NEAR
near-crypto             = "0.21"
near-jsonrpc-client     = "0.9"
near-jsonrpc-primitives = "0.21"
near-primitives         = "0.21"
near-sdk                = "4.0.0"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
