[package]
name = "blob-registry"
description = "Blob registry"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib" ]

[dependencies]
borsh    = { workspace = true }
hex = { workspace = true }
near-sdk = "5.1.0"
near-sdk-contract-tools = "3.0.2"

[dev-dependencies]
serde_json 	   = "1.0.120"
anyhow             = "1.0.75"
near-da-primitives = { path = "../../crates/primitives", default-features = false }
near-workspaces    = { version = "0.8.0", features = [ "unstable" ] }
tokio              = "1.28"

[features]
default = [ "std" ]
std     = [ "near-da-primitives/std", "borsh/std" ]
