[package]
name = "near-da-blob-store"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }
near-sdk-contract-tools = { workspace = true }
uint = { version = "0.9.3", default-features = false }

near-da-primitives = { path = "../../crates/primitives", default-features = false }
