[package]
name = "near-da-blob-store"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }
borsh = { workspace = true }
uint = { version = "0.9.3", default-features = false }

near-da-primitives = { path = "../../crates/primitives", default-features = false }

[dev-dependencies]
workspaces = "0.7.0"
tokio = "~1.28"
anyhow = "1.0.75"

