[package]
authors = { workspace = true }
edition = { workspace = true }
name    = "near-da-blob-store"
version = { workspace = true }

[lib]
crate-type = [ "cdylib" ]

[dependencies]
borsh    = { workspace = true }
near-sdk = { workspace = true }
uint     = { version = "0.9.3", default-features = false }

[dev-dependencies]
anyhow             = "1.0.75"
near-da-primitives = { path = "../../crates/primitives", default-features = false }
near-workspaces    = { version = "0.8.0", features = [ "unstable" ] }
tokio              = "1.28"

[features]
default = [ "std" ]
std     = [ "near-da-primitives/std", "borsh/std", "uint/std" ]
