[package]
name = "near-da-rpc-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "*"
once_cell = "*"
tokio = { version = "1.0", features = ["full"] }
anyhow = "*"
ffi_helpers = "*"
da-rpc = { path = "../da-rpc", package = "near-da-rpc" }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
pretty_env_logger = "*"

[build-dependencies]
cbindgen = "*"
which = "*"
