[package]
authors.workspace = true
edition.workspace = true
name              = "near-da-rpc-sys"
version.workspace = true

[lib]
crate-type = [ "cdylib", "staticlib" ]

[dependencies]
libc      = "*"
once_cell = "*"
tokio     = { version = "1.0", features = [ "full" ] }
# TODO: move to eyre
anyhow      = "*"
da-rpc      = { path = "../da-rpc", package = "near-da-rpc" }
ffi-support = "*"
ffi_helpers = "*"
openssl     = { version = "0.10", features = [ "vendored" ] }

[dev-dependencies]
pretty_env_logger = "*"

[build-dependencies]
cbindgen = "*"
which    = "*"
