[package]
name = "near-da-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
eyre = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
serde_with = { workspace = true, default-features = true }

near-crypto = { workspace = true }
near-primitives = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-da-primitives = { path = "../primitives" }

[dev-dependencies]
pretty_env_logger = "*"

[build-dependencies]
cbindgen = "*"
which = "*"
