[package]
authors.workspace = true
edition.workspace = true
name              = "near-da-rpc"
version.workspace = true

[dependencies]
async-trait = { workspace = true }
eyre        = { workspace = true }
futures     = { workspace = true }
log         = { workspace = true }
tokio       = { version = "1.0", features = [ "full" ] }

# Serialization
serde      = { workspace = true, default-features = true }
serde_json = { workspace = true }
serde_with = { workspace = true, default-features = true }

near-crypto             = { workspace = true }
near-da-primitives      = { path = "../primitives" }
near-jsonrpc-client     = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives         = { workspace = true }

[dev-dependencies]
pretty_env_logger = "*"

[build-dependencies]
cbindgen = "*"
which    = "*"
