[package]
authors.workspace = true
edition.workspace = true
name              = "near-da-rpc"
version.workspace = true

[dependencies]
async-trait = { workspace = true }
eyre        = { workspace = true }
futures     = { workspace = true }
tokio       = { version = "1.0", features = [ "full" ] }
tracing     = { workspace = true }
url         = "2.5"

# Serialization
serde      = { workspace = true, default-features = true }
serde_json = { workspace = true }
serde_with = { workspace = true, default-features = true }

borsh                   = { workspace = true }
near-crypto             = { workspace = true }
near-da-primitives      = { path = "../primitives" }
near-jsonrpc-client     = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives         = { workspace = true }

[dev-dependencies]
tracing-subscriber = "*"

[build-dependencies]
cbindgen = "*"
which    = "*"
