[package]
name = "near-da-erasure-commit"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
borsh = { workspace = true }
serde_with = { workspace = true }
serde = { workspace = true }
near-primitives = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

reed-solomon-novelpoly = "1"
lambdaworks-math = "0.2"
lambdaworks-crypto = "0.2"
nalgebra = "*"
eyre = { workspace = true }

[dev-dependencies]
