[package]
authors.workspace = true
edition.workspace = true
name              = "near-da-erasure-commit"
version.workspace = true

[dependencies]
borsh           = { workspace = true }
hex             = { workspace = true }
log             = { workspace = true }
near-primitives = { workspace = true }
rand            = { workspace = true }
serde           = { workspace = true }
serde_with      = { workspace = true }

eyre                   = { workspace = true }
lambdaworks-crypto     = "0.2"
lambdaworks-math       = "0.2"
nalgebra               = "*"
reed-solomon-novelpoly = "1"

[dev-dependencies]
