[package]
name = "near-da-op-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
log = "*"
eyre = "0.6"
async-trait = "*"
libc = "*"
once_cell = "*"
tokio = { version = "1.0", features = ["full"] }
futures = "*"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "*", features = ["hex"] }

near-crypto = "0.17.0"
near-primitives = "0.17.0"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
near-da-primitives = { path = "../primitives" }

[dev-dependencies]
pretty_env_logger = "*"
