[package]
name = "near-da-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde_with = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
near-primitives = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
hex = { workspace = true }

[features]
default = ["std", "crypto"]
std = ["serde_with/std", "serde/std", "borsh/std"]
crypto = ["near-primitives"]
