[package]
authors.workspace = true
edition.workspace = true
name              = "near-da-primitives"
version.workspace = true

[dependencies]
borsh      = { workspace = true }
serde      = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[features]
default = [ "std" ]
std     = [ "serde_with/std", "serde/std", "borsh/std" ]
